[gd_scene load_steps=37 format=3 uid="uid://ce6inmk64ouhq"]

[ext_resource type="PackedScene" uid="uid://dv4njl10mckqx" path="res://player/hand/hand.tscn" id="1_d2n0v"]
[ext_resource type="Script" path="res://game/game.gd" id="1_xqw32"]
[ext_resource type="Texture2D" uid="uid://cf7hwgqgggqja" path="res://images/background/Monster Tree S1.png" id="2_ti1se"]
[ext_resource type="Texture2D" uid="uid://b4nr5p1io26iv" path="res://images/background/Monster Tree S2.png" id="3_euiuh"]
[ext_resource type="Texture2D" uid="uid://c2wxt0ruuqi3s" path="res://images/background/Monster Tree S3.png" id="4_7fx08"]
[ext_resource type="Script" path="res://game/camerascript.gd" id="4_eftiv"]
[ext_resource type="AudioStream" uid="uid://dbdrqfoh7i50i" path="res://audio/Hit.mp3" id="5_ime1p"]
[ext_resource type="Texture2D" uid="uid://cdia8vl1wq15e" path="res://images/enemu/tree/Tree1.png" id="5_vqvbx"]
[ext_resource type="Texture2D" uid="uid://drfdr2arslbhj" path="res://images/background/Monster Tree S4.png" id="5_y843i"]
[ext_resource type="Texture2D" uid="uid://cfh266shcydlg" path="res://images/background/Monster_Tree_S4.png" id="6_4ots0"]
[ext_resource type="Texture2D" uid="uid://jqpccmtsmvra" path="res://images/enemu/tree/Tree2.png" id="6_g0iks"]
[ext_resource type="Texture2D" uid="uid://bho0i0i6bgeg6" path="res://images/enemu/tree/Tree3.png" id="7_1pedp"]
[ext_resource type="Shader" path="res://game/dmgvin.gdshader" id="7_7h84o"]
[ext_resource type="Texture2D" uid="uid://cgnwubi4cgvkb" path="res://images/enemu/tree/Tree4.png" id="8_kogin"]
[ext_resource type="Texture2D" uid="uid://wldkcnawde41" path="res://images/enemu/tree/Tree5.png" id="9_nhxrx"]
[ext_resource type="Texture2D" uid="uid://x1p5hq25rqsu" path="res://images/enemu/tree/Tree6.png" id="10_i1f3g"]
[ext_resource type="Texture2D" uid="uid://bqc7xlw0p65ht" path="res://images/enemu/tree/Tree7.png" id="11_g7a5f"]
[ext_resource type="Texture2D" uid="uid://itupc5lw7bha" path="res://images/enemu/tree/Tree8.png" id="12_vhi7d"]
[ext_resource type="Texture2D" uid="uid://dkbbfyax6pgex" path="res://images/enemu/tree/Tree9.png" id="13_046g6"]
[ext_resource type="Texture2D" uid="uid://clrf1of3h21n3" path="res://images/enemu/tree/Tree10.png" id="14_7cilo"]
[ext_resource type="Texture2D" uid="uid://bf3hfeeqdp5w2" path="res://images/enemu/jumpscare/enemujump4.png" id="14_xpay4"]
[ext_resource type="Texture2D" uid="uid://xby8asir2t1p" path="res://images/enemu/jumpscare/enemujump5.png" id="15_5l0p4"]
[ext_resource type="Texture2D" uid="uid://d045pbn0vd1jc" path="res://images/enemu/jumpscare/enemujump6.png" id="16_3c6nk"]
[ext_resource type="Texture2D" uid="uid://daq2ldur7fv7o" path="res://images/enemu/jumpscare/enemujump7.png" id="17_6w6fv"]
[ext_resource type="FontFile" uid="uid://cx3qq2nx1ryou" path="res://fonts/dogica/dogicabold.ttf" id="17_x42nw"]
[ext_resource type="Texture2D" uid="uid://bgh5pws1dj2x" path="res://images/enemu/jumpscare/enemujump8.png" id="18_bv0jt"]
[ext_resource type="Texture2D" uid="uid://bs5kkeh1i440p" path="res://images/overlay/Root_Overlay.png" id="18_j5hk3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_pdyf1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ti1se")
}, {
"duration": 1.0,
"texture": ExtResource("3_euiuh")
}, {
"duration": 1.0,
"texture": ExtResource("4_7fx08")
}, {
"duration": 1.0,
"texture": ExtResource("5_y843i")
}, {
"duration": 1.0,
"texture": ExtResource("6_4ots0")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="Animation" id="Animation_id14b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.0174533]
}

[sub_resource type="Animation" id="Animation_vd4yg"]
resource_name = "skew"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5, 10),
"transitions": PackedFloat32Array(0.5, 0.5, 1),
"update": 0,
"values": [-0.0349066, 0.0349066, -0.0349066]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1njye"]
_data = {
"RESET": SubResource("Animation_id14b"),
"skew": SubResource("Animation_vd4yg")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_syd6w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_vqvbx")
}, {
"duration": 1.0,
"texture": ExtResource("6_g0iks")
}, {
"duration": 1.0,
"texture": ExtResource("7_1pedp")
}, {
"duration": 1.0,
"texture": ExtResource("8_kogin")
}, {
"duration": 1.0,
"texture": ExtResource("9_nhxrx")
}, {
"duration": 1.0,
"texture": ExtResource("10_i1f3g")
}, {
"duration": 1.0,
"texture": ExtResource("11_g7a5f")
}, {
"duration": 1.0,
"texture": ExtResource("12_vhi7d")
}, {
"duration": 1.0,
"texture": ExtResource("13_046g6")
}, {
"duration": 1.0,
"texture": ExtResource("14_7cilo")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_xpay4")
}, {
"duration": 1.0,
"texture": ExtResource("15_5l0p4")
}, {
"duration": 1.0,
"texture": ExtResource("16_3c6nk")
}, {
"duration": 1.0,
"texture": ExtResource("17_6w6fv")
}, {
"duration": 1.0,
"texture": ExtResource("18_bv0jt")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_5rvmx"]
font = ExtResource("17_x42nw")
font_size = 64

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8j83s"]
shader = ExtResource("7_7h84o")
shader_parameter/colour = Color(1, 0, 0, 1)
shader_parameter/multiplier = 0.1
shader_parameter/softness = 0.75
shader_parameter/modulate = 0.0

[sub_resource type="LabelSettings" id="LabelSettings_j307e"]
font = ExtResource("17_x42nw")
font_size = 128
outline_size = 10
outline_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4ban2"]
font = ExtResource("17_x42nw")
font_size = 32
outline_size = 10
outline_color = Color(1, 0, 0, 1)

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_xqw32")

[node name="TextureRect" type="AnimatedSprite2D" parent="."]
position = Vector2(640, 360)
scale = Vector2(1.1, 1.1)
skew = -0.0174533
sprite_frames = SubResource("SpriteFrames_pdyf1")
metadata/_edit_use_anchors_ = true

[node name="Skewit" type="AnimationPlayer" parent="TextureRect"]
libraries = {
"": SubResource("AnimationLibrary_1njye")
}

[node name="EnemyHealth" type="ProgressBar" parent="."]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -171.0
offset_right = 171.0
offset_bottom = 131.0
grow_horizontal = 2

[node name="Audio" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Hit" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_ime1p")

[node name="Enemu" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_syd6w")
animation = &"idle"
centered = false

[node name="Hand" parent="." instance=ExtResource("1_d2n0v")]
layout_mode = 0
anchors_preset = 0
anchor_left = -0.195313
anchor_top = 0.652778
anchor_right = 1.19531
anchor_bottom = 1.06944
grow_horizontal = 1
grow_vertical = 2

[node name="EnemuMove" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
anchor_top = 0.467
anchor_right = 1.0
anchor_bottom = 0.533
offset_top = 12.26
offset_bottom = -12.26
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_5rvmx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
script = ExtResource("4_eftiv")

[node name="Shield" type="ColorRect" parent="Camera"]
modulate = Color(1, 1, 1, 0)
offset_left = -436.0
offset_top = -140.0
offset_right = 1484.0
offset_bottom = 940.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.196078, 1, 1, 0.0784314)
metadata/_edit_use_anchors_ = true

[node name="Flash" type="ColorRect" parent="Camera"]
modulate = Color(1, 1, 1, 0)
offset_left = -384.0
offset_top = -190.0
offset_right = 1536.0
offset_bottom = 890.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Damage" type="TextureRect" parent="."]
modulate = Color(0.784314, 0.784314, 0.784314, 0)
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -30.0
offset_right = -48.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1, 1.1)
mouse_filter = 2
texture = ExtResource("18_j5hk3")

[node name="DmgVin" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_8j83s")
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="gameover" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.420139
anchor_right = 1.0
anchor_bottom = 0.579861
grow_horizontal = 2
grow_vertical = 2
text = "Gayme Over"
label_settings = SubResource("LabelSettings_j307e")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="gameoversmol" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.529861
anchor_right = 1.0
anchor_bottom = 0.689583
offset_top = 18.5
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
text = "Gayme Over"
label_settings = SubResource("LabelSettings_4ban2")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Fadeout" type="ColorRect" parent="."]
modulate = Color(0, 0, 0, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
